# cybermage

./: .appveyor.yml  .drone.sh  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: amd64_linux_cmake.yml  amd64_macos_cmake.yml  amd64_windows_cmake.yml  arm64_macos_cmake.yml
ci/: .dockerignore  Makefile  README.md
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/toolchain/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot
ci/sample/: CMakeLists.txt  main.cpp
cmake/: CyberMageConfig.cmake.in  CybermageConfig.cmake.in
cybermage/: CMakeLists.txt
cybermage/data/game/: game.qrc
cybermage/data/game/cards/: card_0.json  card_1.json  card_2.json  card_3.json
cybermage/data/game/decks/: deck_0.json
cybermage/data/ui/: ui.qrc
cybermage/doc/: CMakeLists.txt  Doxyfile.in
cybermage/src/: card.cpp  card.hpp  deck.cpp  deck.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  player.cpp  player.hpp  ressources.cpp  ressources.hpp
game/: CMakeLists.txt
game/Include/: defines.h
game/Include/UI/: ui_manager.h
game/Source/: deck.cpp  game.cpp  main.cpp  ui_manager.cpp
tmp/: cards.json
tools/: CMakeLists.txt
tools/DeckEditor/: CMakeLists.txt
tools/DeckEditor/Include/: ProjectLoader.h
tools/Launcher/: CMakeLists.txt
